# vaktram

./: .env.example  .gitignore  README.md  demo.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/middleware/: auth.py  cors.py  quota.py  rate_limit.py  request_context.py
apps/api/app/models/: __init__.py  ai_config.py  base.py  billing.py  compliance.py  identity.py  integrations.py  intel.py  jobs.py  meeting.py  scheduler.py  summary.py  team.py  transcript.py  verification.py  webhooks.py
apps/api/app/routers/: ai_config.py  analytics.py  ask.py  auth.py  billing.py  bot.py  calendar.py  channels.py  compliance.py  health.py  integrations.py  internal.py  meetings.py  notifications.py  scim.py  search.py  soundbites.py  sso.py  summaries.py  teams.py  topics.py  transcripts.py  webhooks.py  webhooks_outbound.py  ws.py
apps/api/app/schemas/: ai_config.py  billing.py  calendar.py  meeting.py  summary.py  team.py  transcript.py
apps/api/app/security/: permissions.py
apps/api/app/services/: ask_service.py  audit_service.py  billing_service.py  bot_service.py  byok_service.py  calendar_service.py  dlp_service.py  dlq_service.py  email_service.py  email_templates.py  embedding_service.py  encryption_service.py  plans.py  (+23 more)
apps/api/tests/: conftest.py  test_health.py  test_plans.py  test_routes.py  test_security.py  test_storage.py
(+202 files in other folders)
